crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__interface_array_port_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.dts_content
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface TopPorts {
  readonly out: bigint;
  bus: {
    data: { at(i: number): bigint; set(i: number, value: FourStateSignalValue): void; readonly length: number };
    valid: { at(i: number): bigint; set(i: number, value: FourStateSignalValue): void; readonly length: number };
  };
}

export declare const Top: ModuleDefinition<TopPorts>;
