crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__interface_port_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.dts_content
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface TopPorts {
  readonly out: bigint;
  bus: {
    get data(): bigint;
    set data(value: FourStateSignalValue);
    get valid(): bigint;
    set valid(value: FourStateSignalValue);
  };
}

export declare const Top: ModuleDefinition<TopPorts>;
