crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__interface_port_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.js_content
---
exports.Top = {
  __celox_module: true,
  name: "Top",
  source: require("fs").readFileSync(__dirname + "/../Top.veryl", "utf-8"),
  ports: {
    out: { direction: "output", type: "logic", width: 8, is4state: true },
    bus: { direction: "inout", type: "logic", width: 0, interface: {
      data: { direction: "input", type: "logic", width: 8, is4state: true },
      valid: { direction: "input", type: "logic", width: 1, is4state: true },
    } },
  },
  events: [],
};
