crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__interface_port_producer_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: top.dts_content
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface TopPorts {
  get inp(): bigint;
  set inp(value: FourStateSignalValue);
  readonly bus: {
    readonly data: bigint;
    readonly valid: bigint;
  };
}

export declare const Top: ModuleDefinition<TopPorts>;
