crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__internal_vars_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface CounterPorts {
  readonly count: bigint;
  get count_r(): bigint;
  set count_r(value: FourStateSignalValue);
  get en(): bigint;
  set en(value: FourStateSignalValue);
  get rst(): bigint;
  set rst(value: FourStateSignalValue);
}

export declare const Counter: ModuleDefinition<CounterPorts>;
