crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__internal_vars_js.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].js_content"
---
exports.Counter = {
  __celox_module: true,
  name: "Counter",
  source: require("fs").readFileSync(__dirname + "/../Counter.veryl", "utf-8"),
  ports: {
    clk: { direction: "input", type: "clock", width: 1, is4state: true },
    count: { direction: "output", type: "logic", width: 8, is4state: true },
    count_r: { direction: "internal", type: "logic", width: 8, is4state: true },
    en: { direction: "input", type: "logic", width: 1, is4state: true },
    rst: { direction: "input", type: "reset", width: 1, is4state: true },
  },
  events: ["clk"],
};
