crates/celox-ts-gen/src/snapshots/celox_ts_gen__generator__tests__no_clock_dts.snap
---
source: crates/celox-ts-gen/src/generator.rs
expression: "modules[0].dts_content"
---
import type { FourStateSignalValue, ModuleDefinition } from "@celox-sim/celox";

export interface PureAdderPorts {
  get a(): bigint;
  set a(value: FourStateSignalValue);
  get b(): bigint;
  set b(value: FourStateSignalValue);
  readonly sum: bigint;
}

export declare const PureAdder: ModuleDefinition<PureAdderPorts>;
